--- a/FunRowShowView/css/view.css
+++ b/FunRowShowView/css/view.css
@@ -25,3 +25,13 @@
   box-sizing: border-box; /* 让边框和内边距不增加元素的总宽度 */
   background-color: lightblue; /* 设置背景颜色 */
 }
+
+.btn-class{
+	background-color: lightblue; /* 设置背景颜色 */
+	border: 1px solid #ccc; /* 设置边框样式 */
+	color: black; /* 设置文字颜色为白色 */
+	border: none; /* 移除边框 */
+	margin-top: 5px;
+	padding: 5px; /* 设置内边距 */
+	border-radius: 5px; /* 设置圆角边框 */
+}
